--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.6",
-    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query": "^5.61.0",
+    "@tanstack/react-query-devtools": "^5.61.0",
     "axios": "^1.7.7",
     "next": "15.0.2",
     "react": "^18.2.0",
